--- a/app/src/main/res/layout/activity_calculate_ink.xml
+++ b/app/src/main/res/layout/activity_calculate_ink.xml
@@ -82,6 +82,15 @@
         android:textSize="26sp"
         android:textStyle="bold" />
 
+    <RadioButton
+        android:id="@+id/rb_ink_20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="20L"
+        android:textColor="@color/white"
+        android:textSize="26sp"
+        android:textStyle="bold" />
+
   </RadioGroup>
 
   <TextView
