commit development "development of activities and layouts and spinner activity_calculate_ink.xml,Calculateink, Painting,  "

--- a/app/src/main/res/layout/activity_calculate_ink.xml
+++ b/app/src/main/res/layout/activity_calculate_ink.xml
@@ -107,21 +107,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/linearLayout_ink" />
 
-  <Button
-      android:id="@+id/btn_calc_ink"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="16dp"
-      android:layout_marginBottom="60dp"
-      android:text="Calcular"
-      android:textColor="@color/white"
-      android:textSize="20sp"
-      android:textStyle="bold"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/tv_calc_final"
-      app:layout_constraintVertical_bias="0.806" />
+
 
   <TextView
       android:id="@+id/tv_calc_final"
@@ -139,6 +125,47 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/rg_ink"
       app:layout_constraintVertical_bias="0.344" />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/btn_guide_line_center"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.5" />
+
+  <Button
+      android:id="@+id/btn_calc_ink"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="16dp"
+      android:layout_marginBottom="60dp"
+      android:text="Calcular"
+      android:textColor="@color/white"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/btn_guide_line_center"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/tv_calc_final"
+      app:layout_constraintVertical_bias="0.806" />
+
+  <Button
+      android:id="@+id/btn_finish_ink"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="16dp"
+      android:layout_marginBottom="60dp"
+      android:text="Finalizar"
+      android:backgroundTint="@color/black"
+      android:textColor="@color/white"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/btn_guide_line_center"
+      app:layout_constraintTop_toBottomOf="@+id/tv_calc_final"
+      app:layout_constraintVertical_bias="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
