--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:text="SEVERINO's"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="30dp"
+            android:textSize="34dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,8 +43,17 @@
             android:text="Work"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="italic" />
+            android:textSize="26dp"
+            android:textStyle="italic|bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Evite desperdício na sua obra"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            android:textStyle="italic"/>
 
     </LinearLayout>
 
@@ -66,14 +75,15 @@
         app:layout_constraintVertical_bias="0.928" />
 
     <ImageView
-        android:layout_width="350dp"
-        android:layout_height="420dp"
+        android:layout_width="380dp"
+        android:layout_height="460dp"
         android:src="@drawable/tools"
         app:layout_constraintBottom_toTopOf="@+id/btn_init"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.336" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
