--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,9 +62,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Iniciar"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
         android:layout_margin="22dp"
         android:backgroundTint="@color/Primary"
         app:layout_constraintBottom_toBottomOf="parent"
