--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="SEVERINO's"
+            android:text="@string/text_title_main"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="34dp"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="10dp"
-            android:text="Work"
+            android:text="@string/text_subtitle_main"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="26dp"
@@ -49,7 +49,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Evite desperdício na sua obra"
+            android:text="@string/text_trhee_title_main"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18dp"
@@ -61,7 +61,7 @@
         android:id="@+id/btn_init"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Iniciar"
+        android:text="@string/btn_iniciar_main"
         android:textSize="22sp"
         android:textStyle="bold"
         android:layout_margin="22dp"
