--- a/app/src/main/res/layout/activity_calculate_ink.xml
+++ b/app/src/main/res/layout/activity_calculate_ink.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="20dp"
-        android:text="Escolha sua tinta:"
+        android:text="@string/title_ink"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="28dp"
@@ -59,7 +59,7 @@
         android:id="@+id/rb_ink_09"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.9ml "
+        android:text="@string/text_ink_09"
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -68,7 +68,7 @@
         android:id="@+id/rb_ink_3_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3.6L"
+        android:text="@string/text_ink_3_6"
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -77,7 +77,7 @@
         android:id="@+id/rb_ink_18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="18L"
+        android:text="@string/text_ink_18"
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -86,7 +86,7 @@
         android:id="@+id/rb_ink_20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="20L"
+        android:text="@string/text_ink_20"
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -97,7 +97,7 @@
       android:id="@+id/textView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Qual a lata de tinta que deseja usar:"
+      android:text="@string/text_type_fink"
       android:textColor="@color/white"
       android:textSize="18sp"
       android:textStyle="bold"
@@ -139,7 +139,7 @@
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:layout_marginBottom="60dp"
-      android:text="Calcular"
+      android:text="@string/btn_calculate_ink"
       android:textColor="@color/white"
       android:textSize="20sp"
       android:textStyle="bold"
@@ -156,7 +156,7 @@
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:layout_marginBottom="60dp"
-      android:text="Finalizar"
+      android:text="@string/btn_finish_ink"
       android:backgroundTint="@color/black"
       android:textColor="@color/white"
       android:textSize="20sp"
