--- a/app/src/main/res/layout/activity_floor.xml
+++ b/app/src/main/res/layout/activity_floor.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
-            android:text="Calcule a quantidade de piso necessária:"
+            android:text="@string/title_floor"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="28dp"
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/gradient_bg"
-            android:hint="Largura da peça: Ex: 2m"
+            android:hint="@string/text_width_piece"
             android:inputType="numberDecimal"
             android:maxLength="8"
             android:textColor="@color/white"
@@ -77,7 +77,7 @@
             android:maxLength="8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Comprimento da peça: Ex: 2m"
+            android:hint="@string/text_length_piece"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:textSize="19sp"
@@ -100,7 +100,7 @@
             android:maxLength="8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Largura do piso: Ex: 60 cm"
+            android:hint="@string/text_floor_width"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:textSize="19sp"
@@ -123,7 +123,7 @@
             android:maxLength="8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Comprimento do piso: Ex: 60 cm"
+            android:hint="@string/text_length_floor"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:textSize="19sp"
@@ -160,7 +160,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:backgroundTint="@color/white"
-        android:text="Recalcular"
+        android:text="@string/btn_recalculate_floor"
         android:textColor="@color/Primary"
         android:textSize="17dp"
         android:textStyle="bold"
@@ -177,7 +177,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:backgroundTint="@color/black"
-        android:text="Finalizar"
+        android:text="@string/btn_finish_floor"
         android:textSize="17dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -192,7 +192,7 @@
         android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/Primary"
-        android:text="Calcular"
+        android:text="@string/btn_calculate_floor"
         android:textSize="17dp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toTopOf="@+id/textResult"
