commit adjustments, "fix text property in xml files".

--- a/app/src/main/res/layout/activity_floor.xml
+++ b/app/src/main/res/layout/activity_floor.xml
@@ -29,7 +29,7 @@
             android:text="@string/title_floor"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="28dp"
+            android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +162,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/btn_recalculate_floor"
         android:textColor="@color/Primary"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_guide_line_center"
@@ -178,7 +178,7 @@
         android:layout_margin="12dp"
         android:backgroundTint="@color/black"
         android:text="@string/btn_finish_floor"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -193,7 +193,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/Primary"
         android:text="@string/btn_calculate_floor"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toTopOf="@+id/textResult"
         app:layout_constraintEnd_toEndOf="parent"
