--- a/app/src/main/res/layout/activity_plastering.xml
+++ b/app/src/main/res/layout/activity_plastering.xml
@@ -175,8 +175,8 @@
         android:id="@+id/btn_calc_plastering"
         android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:text="Calcular"
-        android:textSize="17dp"
+        android:text="@string/btn_calculate_plastering"
+        android:textSize="17sp"
         android:textStyle="italic|bold"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
