--- a/app/src/main/res/layout/activity_calculate_ink.xml
+++ b/app/src/main/res/layout/activity_calculate_ink.xml
@@ -29,7 +29,7 @@
         android:text="@string/title_ink"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="28dp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
