--- a/app/src/main/res/layout/activity_choose_your_option.xml
+++ b/app/src/main/res/layout/activity_choose_your_option.xml
@@ -28,7 +28,7 @@
         android:text="@string/text_title_your_option"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:text="@string/rb_two_text"
         android:textColor="@color/white"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:layout_margin="4dp" />
 
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:text="@string/rb_three_text"
         android:textColor="@color/white"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:layout_margin="4dp" />
 
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:text="@string/rb_four_text"
         android:textColor="@color/white"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:layout_margin="4dp" />
 
