--- a/app/src/main/res/layout/activity_painting.xml
+++ b/app/src/main/res/layout/activity_painting.xml
@@ -28,7 +28,7 @@
             android:text="Entre com as medidas do local da pintura:"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="28dp"
+            android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
